--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -61,11 +61,13 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="restrict_view">Tonen (browser)</string>
     <string name="title_category">Categorie:</string>
     <string name="title_restrict">Vink aan om te beperken:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Geen filters actief</string>
+
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 filter actief</item>
+        <item quantity="other">%d filters actief</item>
     </plurals>
+
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breedtegraad</string>
     <string name="settings_lon">Lengtegraad</string>
