--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -61,10 +61,10 @@
     <string name="restrict_view">查看 (浏览器)</string>
     <string name="title_category">类目:</string>
     <string name="title_restrict">勾选表示限制:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">无过滤器</string>
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 过滤器</item>
+        <item quantity="other">%d 过滤器</item>
     </plurals>
     <string name="settings_serial">序列号</string>
     <string name="settings_lat">纬度</string>
