--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -14,14 +14,14 @@
     <string name="menu_report">Báo cáo lỗi</string>
     <string name="menu_export">Xuất</string>
     <string name="menu_import">Nhập</string>
-    <string name="menu_submit">Submit restrictions</string>
-    <string name="menu_fetch">Fetch restrictions</string>
+    <string name="menu_submit">Gửi thông tin thiết lập</string>
+    <string name="menu_fetch">Lấy thông tin thiết lập</string>
     <string name="menu_theme">Đổi giao diện</string>
     <string name="menu_pro">Phiên bản Pro</string>
     <string name="menu_about">Về XPrivacy</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">Trợ giúp</string>
     <string name="menu_all">Tất cả</string>
-    <string name="menu_clear">Clear</string>
+    <string name="menu_clear">Xóa</string>
     <string name="menu_app_launch">Chạy</string>
     <string name="menu_app_settings">Tùy chỉnh</string>
     <string name="menu_app_store">Play Store</string>
@@ -32,11 +32,11 @@
     <string name="msg_licensed" formatted="false">Bản quyền: %s</string>
     <string name="msg_loading">Đang tải</string>
     <string name="msg_edit">Chọn biểu tượng của ứng dụng để thiết lập tất cả hạn chế</string>
-    <string name="msg_sure">Bạn có chắc chắn?</string>
+    <string name="msg_sure">Bạn có chắc?</string>
     <string name="msg_done">Xong</string>
-    <string name="msg_reboot">Yêu cầu khởi động lại máy</string>
-    <string name="msg_random">Tạo chuỗi ngẫu nhiên</string>
-    <string name="msg_random_boot">Tự động tạo chuỗi ngẫu nhiên mỗi lần khởi động máy</string>
+    <string name="msg_reboot">Yêu cầu khởi động lại thiết bị</string>
+    <string name="msg_random">Tạo thông tin ngẫu nhiên</string>
+    <string name="msg_random_boot">Tự động tạo thông tin ngẫu nhiên mỗi lần khởi động thiết bị</string>
     <string name="msg_first"><b>XPrivacy đã được lập trình và kiểm tra một cách cẩn trọng nhất, tuy nhiên, không thể đảm bảo chắc chắn XPrivacy sẽ chạy hoàn toàn ổn định và mượt mà trên tất cả thiết bị cũng như tất cả ứng dụng.
 \n\nBạn sẽ chịu trách nhiệm về những rủi ro (nếu có).</b>\n\nXem thêm về bản quyền:</string>
     <string name="restrict_accounts">Tài khoản (Google, Facebook, .v.v.)</string>
@@ -60,10 +60,10 @@
     <string name="restrict_view">Mở trình duyệt</string>
     <string name="title_category">Danh mục:</string>
     <string name="title_restrict">Chọn để hạn chế:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Không lọc</string>
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 bộ lọc có hiệu lực</item>
+        <item quantity="other">%d bộ lọc có hiệu lực</item>
     </plurals>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Vĩ độ</string>
@@ -72,13 +72,13 @@
     <string name="settings_phone">Số điện thoại</string>
     <string name="settings_id">Android ID</string>
     <string name="settings_country">Nước</string>
-    <string name="settings_operator">Operator</string>
+    <string name="settings_operator">Nhà mạng</string>
     <string name="settings_subscriber">ID người đăng kí</string>
     <string name="settings_fpermission">Lọc theo quyền</string>
     <string name="settings_fsystem">Lọc theo ứng dụng hệ thống</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
-    <string name="help_granted">có các quyền của Hệ điều hành</string>
+    <string name="help_granted">có các quyền của hệ điều hành</string>
     <string name="help_used">đã sử dụng dữ liệu</string>
     <string name="help_frozen">đã được tắt</string>
     <string name="help_dangerous">nguy hiểm</string>
