--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -64,6 +64,7 @@
     <string name="title_nofilter">Brak aktywnego filtra</string>
     <plurals name="title_filters">
         <item quantity="one">1 aktywny filtr</item>
+        <item quantity="few">%d aktywne filtry</item>
         <item quantity="other">%d aktywnych filtrów</item>
     </plurals>
     <string name="settings_serial">Numer seryjny</string>
