--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -19,7 +19,7 @@
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
     <string name="menu_about">Apie XPrivacy</string>
-    <string name="menu_help">Help</string>
+    <string name="menu_help">Pagalba</string>
     <string name="menu_all">Visi leidimai</string>
     <string name="menu_clear">Išvalyti visus leidimus</string>
     <string name="menu_app_launch">Paleisti programą</string>
@@ -61,10 +61,10 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_view">Peržiūra (Naršyklė)</string>
     <string name="title_category">Kategorija:</string>
     <string name="title_restrict">Žiūrėti leidimus:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Nėra aktyvių filtrų</string>
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 aktyvus filtras</item>
+        <item quantity="other">%d aktyvūs filtrai</item>
     </plurals>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
