--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -60,10 +60,10 @@
     <string name="restrict_view">Göster (tarayıcı)</string>
     <string name="title_category">Kategori:</string>
     <string name="title_restrict">Engellemek için işaretle:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Etkin filtre yok</string>
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 etkin filtre</item>
+        <item quantity="other">%d etkin filtre</item>
     </plurals>
     <string name="settings_serial">Seri no</string>
     <string name="settings_lat">Enlem</string>
