--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -19,9 +19,9 @@
     <string name="menu_theme">Theme wechseln</string>
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
-    <string name="menu_help">Help</string>
-    <string name="menu_all">Alles</string>
-    <string name="menu_clear">Löschen</string>
+    <string name="menu_help">Hilfe</string>
+    <string name="menu_all">Alles markieren</string>
+    <string name="menu_clear">Alles löschen</string>
     <string name="menu_app_launch">Starte App</string>
     <string name="menu_app_settings">Zeige App-Info</string>
     <string name="menu_app_store">Play Store</string>
@@ -61,10 +61,10 @@
     <string name="restrict_view">Anzeigen (mittels Browser)</string>
     <string name="title_category">Kategorie:</string>
     <string name="title_restrict">Markieren zum Einschränken:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">Kein aktiver Filter</string>
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 Filter aktiv</item>
+        <item quantity="other">%d Filter aktiv</item>
     </plurals>
     <string name="settings_serial">Serien-Nr.</string>
     <string name="settings_lat">Breitengrad</string>
