--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -61,10 +61,10 @@
     <string name="restrict_view">تصفح (المتصفح)</string>
     <string name="title_category">الفئة:</string>
     <string name="title_restrict">إختر للتقيد:</string>
-    <string name="title_nofilter">No active filter</string>
+    <string name="title_nofilter">لايوجد فلتر مُنشّط</string>
     <plurals name="title_filters">
-        <item quantity="one">1 active filter</item>
-        <item quantity="other">%d active filters</item>
+        <item quantity="one">1 فلتر نشط</item>
+        <item quantity="other">%d فلاتر نشِطة</item>
     </plurals>
     <string name="settings_serial">السيريال#</string>
     <string name="settings_lat">خط العرض</string>
