--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -20,8 +20,8 @@
     <string name="menu_pro">Pro-Version</string>
     <string name="menu_about">Über XPrivacy</string>
     <string name="menu_help">Hilfe</string>
-    <string name="menu_all">Alles markieren</string>
-    <string name="menu_clear">Alles löschen</string>
+    <string name="menu_all">Alles (beschränkt)</string>
+    <string name="menu_clear">Nichts (beschränkt)</string>
     <string name="menu_app_launch">Starte App</string>
     <string name="menu_app_settings">Zeige App-Info</string>
     <string name="menu_app_store">Play Store</string>
@@ -81,9 +81,9 @@
     <string name="settings_fpermission">Nach Android-Berechtigungen filtern</string>
     <string name="settings_fsystem">System-Apps ausblenden</string>
     <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
+    <string name="filter_used">Nach Datennutzung filtern</string>
+    <string name="filter_internet">Nach Internetzugang filtern</string>
+    <string name="filter_restricted">Nach Beschränkungen filtern</string>
     <string name="help_application">App</string>
     <string name="help_internet">hat Internet-Berechtigung</string>
     <string name="help_granted">hat Android-Berechtigung</string>
