--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -72,7 +72,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
     <string name="settings_mac">Endereço MAC</string>
-    <string name="settings_ip">IP address</string>
+    <string name="settings_ip">Endereço IP</string>
     <string name="settings_phone">Número de telefone</string>
     <string name="settings_id">Identidade do Android</string>
     <string name="settings_country">País</string>
@@ -80,10 +80,10 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="settings_subscriber">Identidade do subscritor</string>
     <string name="settings_fpermission">Filtrar por permissão</string>
     <string name="settings_fsystem">Filtrar aplicações do sistema</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
+    <string name="settings_log">Relatório de depuração (requer reinicialização)</string>
+    <string name="filter_used">Filtrar o uso de dados</string>
+    <string name="filter_internet">Filtrar o acesso à Internet</string>
+    <string name="filter_restricted">Filtrar restrito</string>
     <string name="help_application">Aplicação</string>
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
