--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -80,10 +80,10 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_subscriber">Abonento ID</string>
     <string name="settings_fpermission">Tik naudojami leidimai</string>
     <string name="settings_fsystem">Nerodyti sistemos programų</string>
-    <string name="settings_log">Debug log (requires restart)</string>
-    <string name="filter_used">Filter on data usage</string>
-    <string name="filter_internet">Filter on internet access</string>
-    <string name="filter_restricted">Filter on restricted</string>
+    <string name="settings_log">DEBUG žurnalas (reikia paleisti iš naujo)</string>
+    <string name="filter_used">Duomenų naudojimo filtras</string>
+    <string name="filter_internet">Interneto prieigos filtras</string>
+    <string name="filter_restricted">Leidimų filtras</string>
     <string name="help_application">Programa</string>
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
