--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -78,14 +78,14 @@
     <string name="settings_operator">Nhà mạng</string>
     <string name="settings_subscriber">ID người đăng kí</string>
     <string name="settings_fpermission">Lọc theo quyền</string>
-    <string name="settings_fapplication">Filter by application type</string>
+    <string name="settings_fapplication">Lọc theo kiểu ứng dụng</string>
     <string name="settings_log">Lưu thông tin gỡ rối (yêu cầu khởi động lại)</string>
     <string name="filter_used">Lọc ứng dụng truy cập dữ liệu</string>
     <string name="filter_internet">Lọc ứng dụng truy cập internet</string>
     <string name="filter_restricted">Lọc ứng dụng đã hạn chế các quyền</string>
-    <string name="filter_app_sys">System application</string>
-    <string name="filter_app_user">User application</string>
-    <string name="filter_app_both">All applications</string>
+    <string name="filter_app_sys">Ứng dụng hệ thống</string>
+    <string name="filter_app_user">Ứng dụng người dùng</string>
+    <string name="filter_app_both">Tất cả ứng dụng</string>
     <string name="help_application">Ứng dụng</string>
     <string name="help_internet">có quyền truy cập mạng</string>
     <string name="help_granted">có các quyền của hệ điều hành</string>
