--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -7,14 +7,14 @@
     <string name="app_xversion" formatted="false">Xposed programos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     
-    <string name="menu_usage">Leidimų naudojimas</string>
+    <string name="menu_usage">Duomenų naudojimas</string>
     <string name="menu_refresh">Atnaujinti</string>
     <string name="menu_settings">Parametrai</string>
     <string name="menu_template">Šablonai</string>
     <string name="menu_report">Pranešti problemas</string>
     <string name="menu_export">Exportuoti</string>
     <string name="menu_import">Importuoti</string>
-    <string name="menu_submit">Siųsti leidimus</string>
+    <string name="menu_submit">Pateikti leidimus</string>
     <string name="menu_fetch">Gauti leidimus</string>
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
@@ -23,7 +23,7 @@
     <string name="menu_all">Visos</string>
     <string name="menu_restriction_all">Išvalyti visus ribojimus</string>
     <string name="menu_clear_all">Išvalyti viską</string>
-    <string name="menu_restrict_all">Taikyti visus ribojimus</string>
+    <string name="menu_restrict_all">Įjungti visus ribojimus</string>
     <string name="menu_usage_all">Perjungti filtrą</string>
     <string name="menu_apply">Taikyti šabloną</string>
     <string name="menu_clear">Išvalyti</string>
@@ -38,13 +38,13 @@
     <string name="msg_licensed" formatted="false">licencija: %s</string>
     <string name="msg_loading">Palaukite...</string>
     <string name="msg_applying">Vykdoma</string>
-    <string name="msg_applied">Template applied</string>
+    <string name="msg_applied">Šablonas pritaikytas</string>
     <string name="msg_saved_to" formatted="false">Išsaugomi %s</string>
     <string name="msg_no_restrictions">Nerasta ribojimų</string>
     <string name="msg_edit">Spustelėkite programos piktogramą norėdami redaguoti ribojimus</string>
     <string name="msg_sure">Įsitikinę?</string>
     <string name="msg_done">Atlikta</string>
-    <string name="msg_reboot">Privaloma perkrauti prietaisą</string>
+    <string name="msg_reboot">Reikia perkrauti prietaisą</string>
     <string name="msg_random_now">Atsitiktiniai duomenys</string>
     <string name="msg_random_access">Atsitiktiniai duomenys prieeigai</string>
     <string name="msg_random_boot">Atsitiktiniai duomenys po perkrovimo</string>
@@ -60,7 +60,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_clipboard">Iškarpinė</string>
     <string name="restrict_contacts">Kontaktai</string>
     <string name="restrict_dictionary">Žodynas (vartotojo)</string>
-    <string name="restrict_email">Elektroninis paštas</string>
+    <string name="restrict_email">El. paštas</string>
     <string name="restrict_identification">Identifikacija (prietaiso)</string>
     <string name="restrict_internet">Internetas</string>
     <string name="restrict_location">Vieta (tiksli/apytikslė)</string>
@@ -118,8 +118,8 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="help_frozen">Išjungtų programų leidimai</string>
     <string name="help_dangerous">Pavojingi leidimai, apribojus, gali sukelti problemų</string>
     <string name="help_half">Iš dalies apribota</string>
-    <string name="help_attention">restrictions need attention</string>
-    <string name="help_restricted">restrictions are changed</string>
-    <string name="help_shared">restrictions are submitted</string>
+    <string name="help_attention">Ribojimams reikia skirti daugiau dėmesio</string>
+    <string name="help_restricted">Ribojimai yra pakeisti</string>
+    <string name="help_shared">Ribojimai yra pateikti</string>
 
 </resources>
